@@ -1,3 +1,5 @@
+	* Added Channel.{deop,devoice,dehalfop}.
+	
 	* Added Http.size and Http.doctype and Http.headers to retrieve
 	various meta-information on URLs.
 	
